moved  svgs to static and started redux

--- a/server/data/tasks.json
+++ b/server/data/tasks.json
@@ -1,1 +1,1 @@
-[{"id":6,"finished":false,"dueTo":"2019-08-24T13:46:48.278Z","description":"Go buy something"},{"id":5,"finished":false,"dueTo":"2019-08-24T13:39:57.529Z","description":"Go and buy some food"},{"id":3,"description":"Do homework","dueTo":"10.10.2019","finished":false}]
+[{"id":6,"finished":false,"dueTo":"2019-08-24T13:46:48.278Z","description":"Go buy something"},{"id":5,"finished":false,"dueTo":"2019-08-24T13:39:57.529Z","description":"Go and buy some food"}]
