--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "concurrently": "^4.1.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
     "react-transition-group": "^4.2.2"
   },
